--- a/PROG/EV2/DAMLibTest/DAMLibTest/DAMLibTest.csproj
+++ b/PROG/EV2/DAMLibTest/DAMLibTest/DAMLibTest.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DAMLib\DAMLib.csproj" />
+  </ItemGroup>
+
 </Project>
